[gd_scene load_steps=3 format=3 uid="uid://c6xjk8q4w26a7"]

[ext_resource type="PackedScene" uid="uid://dflvvy162pbf1" path="res://src/ui/base/BaseWindow.tscn" id="1_parent"]
[ext_resource type="Script" path="res://src/views/PauseMenu.gd" id="2_script"]

[node name="PauseMenu" instance=ExtResource("1_parent")]
script = ExtResource("2_script")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowPanel/MarginContainer/VBoxContainer/ContentContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="WindowPanel/MarginContainer/VBoxContainer/ContentContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "CONTINUAR"

[node name="SaveManagerButton" type="Button" parent="WindowPanel/MarginContainer/VBoxContainer/ContentContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "GESTOR DE PARTIDAS"

[node name="SaveAndExitButton" type="Button" parent="WindowPanel/MarginContainer/VBoxContainer/ContentContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "GUARDAR Y SALIR"

[node name="SettingsButton" type="Button" parent="WindowPanel/MarginContainer/VBoxContainer/ContentContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "OPCIONES"

[node name="ExitToDesktopButton" type="Button" parent="WindowPanel/MarginContainer/VBoxContainer/ContentContainer/VBoxContainer" index="4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "SALIR AL ESCRITORIO"